<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.successemmanuel.eggondictionary.History"
    tools:showIn="@layout/activity_history">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/history_text"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_introduction"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:lineSpacingExtra="1.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_paragrah"
                android:textStyle="normal"
                android:textSize="20dp"
                android:gravity="fill_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:id="@+id/history_text1"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_heading"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:lineSpacingExtra="1.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_body"
                android:textStyle="normal"
                android:textSize="20dp"
                android:gravity="fill_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:id="@+id/history_text2"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_heading1"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:lineSpacingExtra="1.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_body1"
                android:textStyle="normal"
                android:textSize="20dp"
                android:gravity="fill_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/history_text3"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_heading2"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:lineSpacingExtra="1.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_body2"
                android:textStyle="normal"
                android:textSize="20dp"
                android:gravity="fill_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        </LinearLayout>

    </ScrollView>
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-394025609942544/6300978111">
        <!--ads:adUnitId="ca-app-pub-7409792334263349/4695556899"-->

    </com.google.android.gms.ads.AdView>












</RelativeLayout>
